# OpenGLApp

./: CMakeLists.txt  README.md  vcpkg.json
example/: CMakeLists.txt  imgui.cpp  main.cpp  rotating_cube.cpp  targeting_camera.cpp  white_triangle.cpp
example/shaders/: rotating_cube.vert  white_triangle.frag  white_triangle.vert
examples/: CMakeLists.txt  copy_assets.cmake  models.hpp
examples/framebuffer/: main.cpp
examples/imgui/: main.cpp
examples/rotating_cube/: main.cpp
examples/shaders/framebuffer/: gaussian_blur.frag  gaussian_blur.vert  render.frag  render.vert
examples/shaders/rotating_cube/: frag.frag
examples/shaders/targeting_camera/: vert.vert
examples/targeting_camera/: main.cpp
examples/white_triangle/: main.cpp
include/: OpenGLWindow.hpp
include/OpenGLApp/: Camera.hpp  Program.hpp  Shader.hpp  State.hpp  Window.hpp
include/OpenGLApp/Utils/: Image.hpp
src/: OpenGLWindow.cpp
src/OpenGLApp/: Camera.cpp  Program.cpp  Shader.cpp  State.cpp  Window.cpp
src/OpenGLApp/Utils/: Image.cpp
